# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import contactRouter from "./contact";
 import healthRouter from "./health";
+import newsletterRouter from "./newsletter";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(contactRouter);
+router.use(newsletterRouter);
 
 export default router;
